update the docker config of ui